# verilock

./: .gitignore  Cargo.toml  README.md  raw-data.xlsx
benches/: research_questions.rs
page/Adder-Defect/base/: benchmark.json  estimates.json
page/Adder-Defect/change/: estimates.json
page/Adder-Defect/new/: sample.json  tukey.json
page/Adder-Defect/report/: index.html
page/Adder/base/: sample.json
page/Adder/change/: estimates.json
page/Adder/new/: benchmark.json  estimates.json  tukey.json
page/Adder/report/: index.html
page/CRC-Defect/base/: sample.json  tukey.json
page/CRC-Defect/change/: estimates.json
page/CRC-Defect/new/: benchmark.json  estimates.json
page/CRC-Defect/report/: index.html
page/CRC-Env-Defect/base/: benchmark.json  sample.json  tukey.json
page/CRC-Env-Defect/change/: estimates.json
page/CRC-Env-Defect/new/: estimates.json
page/CRC-Env-Defect/report/: index.html
page/CRC-Env/base/: tukey.json
page/CRC-Env/change/: estimates.json
page/CRC-Env/new/: benchmark.json  estimates.json  sample.json
page/CRC-Env/report/: index.html
page/CRC/base/: sample.json
page/CRC/change/: estimates.json
page/CRC/new/: benchmark.json  estimates.json  tukey.json
page/CRC/report/: index.html
page/Copy2-Defect/base/: sample.json  tukey.json
page/Copy2-Defect/change/: estimates.json
page/report/: index.html
src/: analysis.rs  error.rs  hash.rs  lib.rs  main.rs  parser.rs  task.rs
src/abstraction/: data_verification.rs  mod.rs  protocol.rs  sv_info.rs
src/cfsm/: env.rs  fsm.rs  mod.rs  optimization.rs  synthesis.rs
(+126 files in other folders)
