[package]
name = "verilock"
version = "0.1.0"
edition = "2021"

[lib]
name = "verilock"
path = "src/lib.rs"

[dependencies]
sv-parser = "0.13.1"
z3 = {version="0.12", features = ["static-link-z3"]}
lazy_static = "1.4.0"
id_tree = "1.8.0"
petgraph = "0.6.4"
im = "15.1.0"
threadpool = "1.8.1"
crossbeam-queue = "0.3.11"
